--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.min.js"></script>
   </head>
 
-  <body>
+  <body style="border: 0; margin: 0; padding: 0;">
     <!-- the viewer container must have a defined size -->
-    <div id="viewer" style="width: 100vw; height: 100vh;"></div>
+    <div id="viewer" style="border: 0; margin: 0; padding: 0; width: 100vw; height: 100vh;"></div>
 
     <script>
       var viewer = new PhotoSphereViewer.Viewer({
